# qemu-gui

./: .gitignore  .travis.yml  CMakeLists.txt  QemuGUI.sln  README.md
QemuGUI/: QemuGUI.aps  QemuGUI.rc  QemuGUI.vcxproj  QemuGUI.vcxproj.filters  createvm.cpp  createvm.h  createvm.ui  createvmform.cpp  createvmform.h  main.cpp  qemugui.cpp  qemugui.h  qemugui.qrc  qemugui.ui  qemusettings.cpp  qemusettings.h  qemusettings.ui  recordreplay.cpp  recordreplay.h  recordreplay.ui  recordreplaytab.cpp  recordreplaytab.h  resource.h  vmsettingsform.cpp  vmsettingsform.h
cli/: main.cpp
common/: FileHelpers.cpp  FileHelpers.h
config/: GlobalConfig.cpp  GlobalConfig.h  PlatformInfo.cpp  PlatformInfo.h  QemuList.cpp  QemuList.h  RecordReplayParams.cpp  RecordReplayParams.h  VMConfig.cpp  VMConfig.h
device/: DeviceBus.cpp  DeviceUsb.cpp
docs/: How to use qemu-gui.md  Using qemu-gui.md
gui/: AddDeviceForm.cpp  CommandLineParameters.cpp  ConnectionSettingsForm.cpp  ConnectionSettingsForm.h  ConsoleTab.h  CreateVMForm.cpp  CreateVMForm.h  DeviceBus.h  DeviceFactory.h  DeviceForm.cpp  DeviceForm.h  DeviceSystem.cpp  DeviceSystem.h  DeviceUsb.h  GlobalConfig.h  PlatformInfo.cpp  QMPInteraction.h  QemuGUI.cpp  QemuGUI.h  QemuGUICommon.h  QemuInstallationsForm.cpp  QemuInstallationsForm.h  QemuLauncher.h  RecordReplayTab.cpp  RecordReplayTab.h  TerminalTab.cpp  TerminalTab.h  VMSettingsForm.cpp  VMSettingsForm.h
platform files/: arm.xml  i386.xml
qemu/: CommandLineParameters.cpp  CommandLineParameters.h  PlatformInformationReader.cpp  PlatformInformationReader.h  QMPInteraction.cpp  QMPInteraction.h  QemuImgLauncher.cpp  QemuImgLauncher.h  QemuLauncher.cpp  QemuLauncher.h  QemuRunOptions.cpp  QemuRunOptions.h  QemuSocket.cpp  QemuSocket.h
src/: AddDeviceForm.cpp  AddDeviceForm.h  CommandLineParameters.cpp  CommandLineParameters.h  ConnectionSettingsForm.cpp  ConnectionSettingsForm.h  ConsoleTab.cpp  ConsoleTab.h  CreateVMForm.cpp  CreateVMForm.h  Device.cpp  Device.h  DeviceBus.cpp  DeviceBus.h  DeviceFactory.cpp  DeviceFactory.h  DeviceForm.cpp  DeviceForm.h  DeviceNetwork.cpp  DeviceNetwork.h  DeviceStorage.cpp  DeviceStorage.h  DeviceSystem.cpp  DeviceSystem.h  DeviceUsb.cpp  DeviceUsb.h  GlobalConfig.cpp  GlobalConfig.h  LaunchQemu.cpp  LaunchQemu.h  PlatformInfo.cpp  PlatformInfo.h  PlatformInformation.cpp  PlatformInformation.h  PlatformInformationReader.cpp  PlatformInformationReader.h  QMPInteraction.cpp  QMPInteraction.h  QemuGUI.cpp  QemuGUI.h  (+22 more)
src/Resources/: btns.psd
